--- a/istio/service_entry_oneagent.yml
+++ b/istio/service_entry_oneagent.yml
@@ -50,8 +50,8 @@ spec:
           name: HTTPS
   - match:
     - port: 443
-      sni_hosts: sg-us-west-2-54-191-195-87-prod-us-west-2-oregon.live.ruxit.com 
-      - 
+      sni_hosts: 
+      - sg-us-west-2-54-191-195-87-prod-us-west-2-oregon.live.ruxit.com  
     route:
     - destination:
         host: sg-us-west-2-54-191-195-87-prod-us-west-2-oregon.live.ruxit.com 
@@ -60,8 +60,8 @@ spec:
           name: HTTPS
   - match:
     - port: 443
-      sni_hosts: sg-us-west-2-35-155-216-1-prod-us-west-2-oregon.live.ruxit.com 
-      - 
+      sni_hosts:  
+      - sg-us-west-2-35-155-216-1-prod-us-west-2-oregon.live.ruxit.com
     route:
     - destination:
         host: sg-us-west-2-35-155-216-1-prod-us-west-2-oregon.live.ruxit.com 
@@ -70,8 +70,8 @@ spec:
           name: HTTPS
             - match:
     - port: 443
-      sni_hosts: sg-us-west-2-54-69-116-21-prod-us-west-2-oregon.live.ruxit.com 
-      - 
+      sni_hosts:  
+      - sg-us-west-2-54-69-116-21-prod-us-west-2-oregon.live.ruxit.com
     route:
     - destination:
         host: sg-us-west-2-54-69-116-21-prod-us-west-2-oregon.live.ruxit.com 
@@ -80,8 +80,8 @@ spec:
           name: HTTPS
             - match:
     - port: 443
-      sni_hosts: sg-us-west-2-54-213-205-48-prod-us-west-2-oregon.live.ruxit.com 
-      - 
+      sni_hosts:  
+      - sg-us-west-2-54-213-205-48-prod-us-west-2-oregon.live.ruxit.com
     route:
     - destination:
         host: sg-us-west-2-54-213-205-48-prod-us-west-2-oregon.live.ruxit.com 
@@ -90,8 +90,8 @@ spec:
           name: HTTPS
             - match:
     - port: 443
-      sni_hosts: sg-us-west-2-34-211-171-253-prod-us-west-2-oregon.live.ruxit.com 
-      - 
+      sni_hosts: 
+      - sg-us-west-2-34-211-171-253-prod-us-west-2-oregon.live.ruxit.com 
     route:
     - destination:
         host: sg-us-west-2-34-211-171-253-prod-us-west-2-oregon.live.ruxit.com 
@@ -100,8 +100,8 @@ spec:
           name: HTTPS
             - match:
     - port: 443
-      sni_hosts: sg-us-west-2-54-213-211-21-prod-us-west-2-oregon.live.ruxit.com 
-      - 
+      sni_hosts:  
+      - sg-us-west-2-54-213-211-21-prod-us-west-2-oregon.live.ruxit.com
     route:
     - destination:
         host: sg-us-west-2-54-213-211-21-prod-us-west-2-oregon.live.ruxit.com 
@@ -110,8 +110,8 @@ spec:
           name: HTTPS
             - match:
     - port: 443
-      sni_hosts: sg-us-west-2-54-186-88-199-prod-us-west-2-oregon.live.ruxit.com 
-      - 
+      sni_hosts: 
+      - sg-us-west-2-54-186-88-199-prod-us-west-2-oregon.live.ruxit.com 
     route:
     - destination:
         host: sg-us-west-2-54-186-88-199-prod-us-west-2-oregon.live.ruxit.com 
@@ -120,8 +120,8 @@ spec:
           name: HTTPS
             - match:
     - port: 443
-      sni_hosts: sg-us-west-2-34-223-233-242-prod-us-west-2-oregon.live.ruxit.com 
-      - 
+      sni_hosts:  
+      - sg-us-west-2-34-223-233-242-prod-us-west-2-oregon.live.ruxit.com
     route:
     - destination:
         host: sg-us-west-2-34-223-233-242-prod-us-west-2-oregon.live.ruxit.com 
